--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
         </div>
 
         <div >
-          <form class="d-flex" role="search">
-            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-primary" type="submit">Search</button>
+          <form class="d-flex align-items-center" role="search">
+            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
+            <button class="form-search" type="submit"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+            </svg></button>
           </form>
         </div>
 
