--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
 
       </div>
 
-      <div class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
+      <div id="cards" class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4 flex-grow-1">
 
-        <div class="card">
+        <!-- <div class="card">
           <img src="./img/food_fair.jpg" class="card-img-top pt-2 px-2" alt="food fair">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
@@ -138,91 +138,8 @@
               <a href="./pages/details.html" id="details-1" class="btn btn-primary">Details</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="card">
-          <img src="./img/outing_to_the_museum.jpg" class="card-img-top pt-2 px-2" alt="museum">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Art Exhibition</h5>
-              <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./img/costume_party.jpg" class="card-img-top pt-2 px-2" alt="costume party">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Halloween Night</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-3" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./img/music_concert.jpg" class="card-img-top pt-2 px-2" alt="music concert">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Metallica in concert</h5>
-              <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./img/marathon.jpg" class="card-img-top pt-2 px-2" alt="marathon">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">10K for life</h5>
-              <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-5" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./img/books.jpg" class="card-img-top pt-2 px-2" alt="book fair">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">School Book Fair</h5>
-              <p class="card-text">Bring your unused school book and bring the one you need.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-6" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="./img/cinema.jpg" class="card-img-top pt-2 px-2" alt="cinema">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Avengers</h5>
-              <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="./pages/details.html" id="details-7" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
 
       </div>
 
@@ -249,8 +166,10 @@
 
   </div>
 
+  <script type="module" src="./js/index.js"></script>
+  <!-- <script type="module" src="./data/data.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="./js/script.js"></script>
+  <!-- <script src="./js/script.js"></script> -->
 
 </body>
 </html>
