--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -125,63 +125,7 @@
 
       </div>
 
-      <div class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
-
-        <div class="card">
-          <img src="../img/food_fair.jpg" class="card-img-top pt-2 px-2" alt="food fair">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Festival of the collectivities</h5>
-              <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-1" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="../img/outing_to_the_museum.jpg" class="card-img-top pt-2 px-2" alt="museum">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Art Exhibition</h5>
-              <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-2" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="../img/marathon.jpg" class="card-img-top pt-2 px-2" alt="marathon">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">10K for life</h5>
-              <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-5" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="../img/books.jpg" class="card-img-top pt-2 px-2" alt="books">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">School Book Fair</h5>
-              <p class="card-text">Bring your unused school book and bring the one you need.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-6" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
+      <div id="cards" class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
 
       </div>
 
@@ -208,6 +152,7 @@
   
   </div>
   
+  <script type="module" src="../js/pastEvents.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
