--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -125,49 +125,7 @@
 
       </div>
 
-      <div class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
-
-        <div class="card">
-          <img src="../img/cinema.jpg" class="card-img-top pt-2 px-2" alt="cinema">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Avengers</h5>
-              <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-7" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="../img/costume_party.jpg" class="card-img-top pt-2 px-2" alt="costume party">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Halloween Night</h5>
-              <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-3" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="../img/music_concert.jpg" class="card-img-top pt-2 px-2" alt="music concert">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <div>
-              <h5 class="card-title text-center">Metallica in concert</h5>
-              <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="detail-p">Price</p>
-              <a href="../pages/details.html" id="details-4" class="btn btn-primary">Details</a>
-            </div>
-          </div>
-        </div>
+      <div id="cards" class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
 
       </div>
 
@@ -194,6 +152,7 @@
   
   </div>
   
+  <script type="module" src="../js/upcomingEvents.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
