--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
 
       <div class="select d-flex flex-column align-items-center justify-content-between flex-lg-row p-3">
 
-        <div class="d-flex flex-column flex-md-row py-3">
-          <div class="form-check mx-2">
+        <div id="checkboxes" class="d-flex flex-column flex-md-row py-3">
+
+          <!-- <div class="form-check mx-2">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
             <label class="form-check-label" for="flexCheckChecked">
               Category 1
@@ -110,12 +111,13 @@
             <label class="form-check-label" for="flexCheckDefault4">
               Category 5
             </label>
-          </div>
+          </div> -->
+
         </div>
 
         <div >
           <form class="d-flex align-items-center" role="search">
-            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
+            <input id="search" class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
             <button class="form-search" type="submit"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
             </svg></button>
