--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
+<body class="body">
   
-  <div class="container__home d-flex flex-column justify-content-between">
+  <div class="container__home">
 
     <header class="header">
 
@@ -80,42 +80,9 @@
 
       <div class="select d-flex flex-column align-items-center justify-content-between flex-lg-row p-3">
 
-        <div id="checkboxes" class="d-flex flex-column flex-md-row py-3">
+        <div id="checkboxes" class="checkboxes d-flex flex-column flex-lg-row py-3 flex-wrap justify-content-center"></div>
 
-          <!-- <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-            <label class="form-check-label" for="flexCheckChecked">
-              Category 1
-            </label>
-          </div>
-          <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-            <label class="form-check-label" for="flexCheckDefault1">
-              Category 2
-            </label>
-          </div>
-          <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-            <label class="form-check-label" for="flexCheckDefault2">
-              Category 3
-            </label>
-          </div>
-          <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault3">
-            <label class="form-check-label" for="flexCheckDefault3">
-              Category 4
-            </label>
-          </div>
-          <div class="form-check mx-2">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault4">
-            <label class="form-check-label" for="flexCheckDefault4">
-              Category 5
-            </label>
-          </div> -->
-
-        </div>
-
-        <div >
+        <div>
           <form class="d-flex align-items-center" role="search">
             <input id="search" class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
             <button class="form-search" type="submit"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -126,9 +93,7 @@
 
       </div>
 
-      <div id="cards" class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4 flex-grow-1">
-
-      </div>
+      <div id="cards" class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4 flex-grow-1"></div>
 
     </main>
 
