--- a/pages/details.html
+++ b/pages/details.html
@@ -48,7 +48,7 @@
 
       <div class="details-div d-flex flex-column align-items-center justify-content-center flex-md-row p-4" id="details-div">
 
-        <div class="details-img p-2 d-flex justify-content-center" id="details-img">
+        <!-- <div class="details-img p-2 d-flex justify-content-center" id="details-img">
           <img src="../img/music_concert.jpg" alt="music concert" class="w-100 justify-content-center align-items-center">
         </div>
 
@@ -63,7 +63,9 @@
             <li><span>Estimate: </span>138000</li>
             <li><span>Price: </span>150</li>
           </ul>
-        </div>
+        </div> -->
+
+        <div id="event-container"></div>
 
       </div>
 
@@ -91,7 +93,7 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="../js/script.js"></script>
+  <script type="module" src="../js/details.js"></script>
 
 </body>
 </html>
